feat: getOrderSpecifiers 'toList()' 수정 (#CHZZ-74)